[package]
name = "vegh-js"
version = "0.1.0"
edition = "2024"
authors = ["CodeTease"]
description = "VeghJS - WASM binding for Vegh snapshot tool (Pure Rust)"
license = "MIT"
wasm-opt = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# WASM Bridge
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.6"

# Core Logic
ruzstd = "0.7"   # <-- THÊM DÒNG NÀY (Pure Rust, không cần setup gì cả)
tar = "0.4"
sha2 = "0.10"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Fix for random generation in WASM
getrandom = { version = "0.2", features = ["js"] }