[package]
name = "vegh-js"
version = "0.2.0"
edition = "2024"
authors = ["CodeTease"]
description = "VeghJS - WASM binding for Vegh snapshot tool (Pure Rust)"
license = "MIT"
wasm-opt = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# WASM Bridge
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.6"

# Core Logic
ruzstd = "0.7"   
tar = "0.4"
# [SYNC] Replaced sha2 with blake3 to match Vegh Core 0.3.0
# Using pure implementation for WASM compatibility
blake3 = { version = "1.5", features = ["pure"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Fix for random generation in WASM
getrandom = { version = "0.2", features = ["js"] }